# eink-friendly-launcher

./: README.md  com.samueldr.EinkFriendlyLauncher.desktop.in  com.samueldr.EinkFriendlyLauncher.service.in  default.nix  meson.build  package.nix  run.sh
src/: main.vala  meson.build
